--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "JiYoung Kim"
-  avatar           : "/assets/images/avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/avatar4.jpg"
   bio              : "Backend developer curious about frontend development"
   location         : "Seoul, Korea"
   email            : "podomat.ex@gmail.com"
