--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "JiYoung Kim"
+  name             : "졍"
   avatar           : "/assets/images/avatar4.jpg"
   bio              : "Backend developer curious about frontend development"
   location         : "Seoul, Korea"
