--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "素雪"
   avatar           : "/assets/images/profile2c.jpg"
-  bio              : "Backend developer curious about frontend development"
+  bio              : "Back-end developer curious about front-end development"
   location         : "Seoul, Korea"
   email            : "podomat.ex@gmail.com"
   links:
